Correction RF results table

--- a/Labs/Lab_3/Lab_3.2_Arboles.ipynb
+++ b/Labs/Lab_3/Lab_3.2_Arboles.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -430,8 +430,8 @@
     "    \n",
     "2.1 ¿Tiene algún efecto la normalización o estándarización de las variables en el desempeño del modelo de árboles de decisión? Explique su respuesta.    \n",
     "\n",
-    "R/ Con las siguientes celdas evidenciamos que los resultados no varían significativamente al normnalizar o no normalizar los datos. De hecho, la librería sklearn expone que una de las ventajas de este modelo es que requiere poca preparación de los datos. https://scikit-learn.org/stable/modules/tree.html#tree\n",
-    "Además, en este algoritmo de árboles de decisión no se toman en cuenta medidas de distancia; en tal situación si es necesario normalizar los datos."
+    "R/ Con las siguientes celdas de código evidenciamos que los resultados no varían significativamente al normalizar o no normalizar los datos. De hecho, la librería sklearn expone que una de las ventajas de este modelo es que requiere poca preparación de los datos (https://scikit-learn.org/stable/modules/tree.html#tree).\n",
+    "Además, en el algoritmo de árboles de decisión no se toman en cuenta medidas de distancia; en algoritmos que implementan estas medidas si es necesario normalizar los datos."
    ]
   },
   {
@@ -523,11 +523,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from numpy import random\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "import time\n",
     "\n",
     "def RF(trees, features):\n",
     "    #Validamos el modelo\n",
@@ -537,6 +539,9 @@
     "    EficienciaVal = np.zeros(Folds)\n",
     "    skf = StratifiedKFold(n_splits=Folds)\n",
     "    j = 0\n",
+    "    \n",
+    "    timesTrain = []\n",
+    "    \n",
     "    for train, test in skf.split(X, Y):\n",
     "        Xtrain = X[train,:]\n",
     "        Ytrain = Y[train]\n",
@@ -550,7 +555,10 @@
     "        Xtest = (Xtest - np.matlib.repmat(media, Xtest.shape[0], 1))/np.matlib.repmat(desvia, Xtest.shape[0], 1)\n",
     "\n",
     "        #Haga el llamado a la función para crear y entrenar el modelo usando los datos de entrenamiento\n",
+    "        ti = time.clock()\n",
     "        model = RandomForestClassifier(n_estimators=trees, max_features= features).fit(Xtrain, Ytrain)\n",
+    "        tf = time.clock()\n",
+    "        timesTrain.append(tf-ti)\n",
     "\n",
     "        #Validación\n",
     "        Ytrain_pred = model.predict(Xtrain)#Use el modelo previamente entrenado para hacer predicciones con las mismas muestras de entrenamiento\n",
@@ -563,7 +571,7 @@
     "\n",
     "    print('Eficiencia durante el entrenamiento = ' + str(np.mean(EficienciaTrain)) + '+-' + str(np.std(EficienciaTrain)))\n",
     "    print('Eficiencia durante la validación = ' + str(np.mean(EficienciaVal)) + '+-' + str(np.std(EficienciaVal)))\n",
-    "    return(np.mean(EficienciaVal), np.std(EficienciaVal))"
+    "    return(np.mean(EficienciaVal), np.std(EficienciaVal), np.mean(timesTrain))"
    ]
   },
   {
@@ -603,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -647,18 +655,6 @@
       "Eficiencia durante el entrenamiento = 0.9995361781076066+-0.0008033630832879904\n",
       "Eficiencia durante la validación = 0.9306345598766973+-0.027807838189991822\n",
       "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
-      "Eficiencia durante la validación = 0.9610693957645904+-0.007074499069205539\n",
-      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
-      "Eficiencia durante la validación = 0.9486528658642532+-0.014772041769618965\n",
-      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
-      "Eficiencia durante la validación = 0.9513611470244373+-0.02222907462205584\n",
-      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
-      "Eficiencia durante la validación = 0.9291913540071861+-0.02564760207180468\n",
-      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
-      "Eficiencia durante la validación = 0.9264291803093025+-0.025221692665524972\n",
-      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
-      "Eficiencia durante la validación = 0.9250244258277+-0.03643675036227138\n",
-      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
       "Eficiencia durante la validación = 0.9554665935702371+-0.020781731387497254\n",
       "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
       "Eficiencia durante la validación = 0.9527502059731432+-0.023971672675170516\n",
@@ -669,13 +665,33 @@
       "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
       "Eficiencia durante la validación = 0.9375484807038562+-0.02676873794773323\n",
       "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
-      "Eficiencia durante la validación = 0.9250092533522006+-0.022801703297675426\n"
+      "Eficiencia durante la validación = 0.9250092533522006+-0.022801703297675426\n",
+      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
+      "Eficiencia durante la validación = 0.9693878081155345+-0.012950495547078358\n",
+      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
+      "Eficiencia durante la validación = 0.9582677359969523+-0.020146066239176877\n",
+      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
+      "Eficiencia durante la validación = 0.9416463381536689+-0.024536794213886094\n",
+      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
+      "Eficiencia durante la validación = 0.9346934514559158+-0.017972678190567797\n",
+      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
+      "Eficiencia durante la validación = 0.9347240593647319+-0.02663410908126807\n",
+      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
+      "Eficiencia durante la validación = 0.9292300654946748+-0.02865413534875374\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Kevin\\Anaconda3\\lib\\site-packages\\qgrid\\grid.py:827: DeprecationWarning: QgridWidget._df_changed is deprecated in traitlets 4.1: use @observe and @unobserve instead.\n",
+      "  def _df_changed(self):\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f8836246cc94d439c39be0b95a6e984",
+       "model_id": "59a81e4817db47e680f020d6300ba8c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -701,12 +717,12 @@
     "#df_types[\"Intervalo de confianza\"][0] = 0.0143\n",
     "\n",
     "index = 0\n",
-    "trees = np.array([5,10,20,30,50])\n",
-    "features = np.array([5,10,15,20,25,30])\n",
+    "trees = np.array([5,10,20,50,100])\n",
+    "maxFeatures = np.array([5,10,15,20,25,30])\n",
     "for i in range(np.size(trees)):\n",
     "    est = trees[i]\n",
-    "    for j in range(np.size(features)):\n",
-    "        perf, std = RF(est, features[j])\n",
+    "    for j in range(np.size(maxFeatures)):\n",
+    "        perf, std = RF(est, maxFeatures[j])\n",
     "        df_types[\"Eficiencia en validacion\"][index] = perf\n",
     "        df_types[\"Intervalo de confianza\"][index] = std\n",
     "        index += 1\n",
@@ -717,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +750,7 @@
        "(0.9471712000321221, 0.021994172966967197)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -853,67 +869,36 @@
        "    <tr>\n",
        "      <td rowspan=\"6\" valign=\"top\">20</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.951361</td>\n",
-       "      <td>0.0222291</td>\n",
+       "      <td>0.947171</td>\n",
+       "      <td>0.0219942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>0.951361</td>\n",
-       "      <td>0.0222291</td>\n",
+       "      <td>0.947171</td>\n",
+       "      <td>0.0219942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>15</td>\n",
-       "      <td>0.951361</td>\n",
-       "      <td>0.0222291</td>\n",
+       "      <td>0.947171</td>\n",
+       "      <td>0.0219942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>20</td>\n",
-       "      <td>0.951361</td>\n",
-       "      <td>0.0222291</td>\n",
+       "      <td>0.947171</td>\n",
+       "      <td>0.0219942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>25</td>\n",
-       "      <td>0.951361</td>\n",
-       "      <td>0.0222291</td>\n",
+       "      <td>0.947171</td>\n",
+       "      <td>0.0219942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>30</td>\n",
-       "      <td>0.951361</td>\n",
-       "      <td>0.0222291</td>\n",
+       "      <td>0.947171</td>\n",
+       "      <td>0.0219942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td rowspan=\"6\" valign=\"top\">50</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.961069</td>\n",
-       "      <td>0.0070745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>0.948653</td>\n",
-       "      <td>0.014772</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>20</td>\n",
-       "      <td>0.929191</td>\n",
-       "      <td>0.0256476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>25</td>\n",
-       "      <td>0.926429</td>\n",
-       "      <td>0.0252217</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>30</td>\n",
-       "      <td>0.925024</td>\n",
-       "      <td>0.0364368</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td rowspan=\"6\" valign=\"top\">100</td>\n",
        "      <td>5</td>\n",
        "      <td>0.955467</td>\n",
        "      <td>0.0207817</td>\n",
@@ -925,8 +910,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>15</td>\n",
-       "      <td>0.947171</td>\n",
-       "      <td>0.0219942</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>20</td>\n",
@@ -942,6 +927,37 @@
        "      <td>30</td>\n",
        "      <td>0.925009</td>\n",
        "      <td>0.0228017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td rowspan=\"6\" valign=\"top\">100</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.969388</td>\n",
+       "      <td>0.0129505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>0.958268</td>\n",
+       "      <td>0.0201461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>0.941646</td>\n",
+       "      <td>0.0245368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>0.934693</td>\n",
+       "      <td>0.0179727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>0.934724</td>\n",
+       "      <td>0.0266341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>0.92923</td>\n",
+       "      <td>0.0286541</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -962,24 +978,24 @@
        "                  20                                            0.922301   \n",
        "                  25                                            0.922301   \n",
        "                  30                                            0.922347   \n",
-       "20                5                                             0.951361   \n",
-       "                  10                                            0.951361   \n",
-       "                  15                                            0.951361   \n",
-       "                  20                                            0.951361   \n",
-       "                  25                                            0.951361   \n",
-       "                  30                                            0.951361   \n",
-       "50                5                                             0.961069   \n",
-       "                  10                                            0.948653   \n",
-       "                  15                                                       \n",
-       "                  20                                            0.929191   \n",
-       "                  25                                            0.926429   \n",
-       "                  30                                            0.925024   \n",
-       "100               5                                             0.955467   \n",
-       "                  10                                             0.95275   \n",
+       "20                5                                             0.947171   \n",
+       "                  10                                            0.947171   \n",
        "                  15                                            0.947171   \n",
+       "                  20                                            0.947171   \n",
+       "                  25                                            0.947171   \n",
+       "                  30                                            0.947171   \n",
+       "50                5                                             0.955467   \n",
+       "                  10                                             0.95275   \n",
+       "                  15                                                       \n",
        "                  20                                            0.934748   \n",
        "                  25                                            0.937548   \n",
        "                  30                                            0.925009   \n",
+       "100               5                                             0.969388   \n",
+       "                  10                                            0.958268   \n",
+       "                  15                                            0.941646   \n",
+       "                  20                                            0.934693   \n",
+       "                  25                                            0.934724   \n",
+       "                  30                                             0.92923   \n",
        "\n",
        "                                                Intervalo de confianza  \n",
        "Numero de arboles Variables analizadas por nodo                         \n",
@@ -995,27 +1011,27 @@
        "                  20                                         0.0267698  \n",
        "                  25                                         0.0267698  \n",
        "                  30                                         0.0304132  \n",
-       "20                5                                          0.0222291  \n",
-       "                  10                                         0.0222291  \n",
-       "                  15                                         0.0222291  \n",
-       "                  20                                         0.0222291  \n",
-       "                  25                                         0.0222291  \n",
-       "                  30                                         0.0222291  \n",
-       "50                5                                          0.0070745  \n",
-       "                  10                                          0.014772  \n",
-       "                  15                                                    \n",
-       "                  20                                         0.0256476  \n",
-       "                  25                                         0.0252217  \n",
-       "                  30                                         0.0364368  \n",
-       "100               5                                          0.0207817  \n",
-       "                  10                                         0.0239717  \n",
+       "20                5                                          0.0219942  \n",
+       "                  10                                         0.0219942  \n",
        "                  15                                         0.0219942  \n",
+       "                  20                                         0.0219942  \n",
+       "                  25                                         0.0219942  \n",
+       "                  30                                         0.0219942  \n",
+       "50                5                                          0.0207817  \n",
+       "                  10                                         0.0239717  \n",
+       "                  15                                                    \n",
        "                  20                                          0.022723  \n",
        "                  25                                         0.0267687  \n",
-       "                  30                                         0.0228017  "
+       "                  30                                         0.0228017  \n",
+       "100               5                                          0.0129505  \n",
+       "                  10                                         0.0201461  \n",
+       "                  15                                         0.0245368  \n",
+       "                  20                                         0.0179727  \n",
+       "                  25                                         0.0266341  \n",
+       "                  30                                         0.0286541  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1048,7 @@
     "    \n",
     "3.1 Realice una prueba adicional empleando el total de variables para la selección del mejor umbral en cada nodo ¿De acuerdo con los resultados es mejor usar un bagging de árboles o Random Forest? Explique su respuesta.    \n",
     "\n",
-    "R/ Evidenciamos que con pocos árboles (5) no se nota una diferencia significativa entre bagging y RF. Sin embargo, con más árboles, el RF presenta un mejor desempeño debido a mejores compensaciones del sesgo de varianza, lo cual a su vez responde a la aleatoriedad. Además, el RF tiende a ser más rápido por que cada árbol aprende de un solo subconjunto."
+    "R/ Evidenciamos que con pocos árboles (5) no se nota una diferencia significativa entre bagging y RF. Sin embargo, con más árboles, el RF presenta un mejor desempeño debido a mejores compensaciones del sesgo de varianza, lo cual a su vez responde a la aleatoriedad. Además, el RF tiende a ser más rápido por que cada árbol aprende de un subconjunto."
    ]
   },
   {
@@ -1193,7 +1209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time"
+    "import time\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   }
  ],
