Lab_4.1 - code info for outcomes

--- a/Labs/Lab_4/Lab_4.1_MLP.ipynb
+++ b/Labs/Lab_4/Lab_4.1_MLP.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,6 +179,8 @@
     "    print('MAPE salida 1 = ' + str(np.mean(ErrorY1)) + '+-' + str(np.std(ErrorY1)))\n",
     "    print('MAPE salida 2 = ' + str(np.mean(ErrorY2)) + '+-' + str(np.std(ErrorY2)))\n",
     "    print('MAPE total = '    + str(np.mean(ErrorT)) + '+-' + str(np.std(ErrorT)))\n",
+    "    #print(mlp.out_activation_)\n",
+    "\n",
     "    return (np.mean(ErrorY1), np.std(ErrorY1), np.mean(ErrorY2), np.std(ErrorY2))"
    ]
   },
@@ -803,6 +805,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Kevin\\Anaconda3\\lib\\site-packages\\sklearn\\neural_network\\multilayer_perceptron.py:566: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n",
+      "C:\\Users\\Kevin\\Anaconda3\\lib\\site-packages\\sklearn\\neural_network\\multilayer_perceptron.py:566: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n",
+      "C:\\Users\\Kevin\\Anaconda3\\lib\\site-packages\\sklearn\\neural_network\\multilayer_perceptron.py:566: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAPE salida 1 = 0.07724764613532986+-0.0013535560956051396\n",
+      "MAPE salida 2 = 1.732973417213271+-0.0694282238180434\n",
+      "MAPE total = 0.9051105316743003+-0.03470625466201166\n",
+      "identity\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Kevin\\Anaconda3\\lib\\site-packages\\sklearn\\neural_network\\multilayer_perceptron.py:566: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.07724764613532986,\n",
+       " 0.0013535560956051396,\n",
+       " 1.732973417213271,\n",
+       " 0.0694282238180434)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MLPR(1,28)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -829,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,35 +985,9 @@
     "\n",
     "    print('Eficiencia durante el entrenamiento = ' + str(np.mean(EficienciaTrain)) + '+-' + str(np.std(EficienciaTrain)))\n",
     "    print('Eficiencia durante la validación = ' + str(np.mean(EficienciaVal)) + '+-' + str(np.std(EficienciaVal)))\n",
+    "    #print(mlp.out_activation_)\n",
+    "    #print(mlp.n_outputs_)\n",
     "    return(np.mean(EficienciaVal), np.std(EficienciaVal))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
-      "Eficiencia durante la validación = 0.9623501551552112+-0.033708835273301894\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0.9623501551552112, 0.033708835273301894)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MLPC(1, 24)"
    ]
   },
   {
@@ -1398,6 +1427,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eficiencia durante el entrenamiento = 1.0+-0.0\n",
+      "Eficiencia durante la validación = 0.9623501551552112+-0.033708835273301894\n",
+      "softmax\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.9623501551552112, 0.033708835273301894)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MLPC(1, 24)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1425,7 +1484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El modelo tiene 4 neuronas en la capa de salida. Esto se debe a que estamos abordando un problema con 4 clases, tal que se genera una salida para cada una."
+    "El modelo tiene 4 neuronas en la capa de salida. Esto se debe a que estamos abordando un problema con 4 clases, tal que se genera una salida para cada clase."
    ]
   }
  ],
