--- a/ANN_Exercise.ipynb
+++ b/ANN_Exercise.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ejercicio: Red neuronal MLP con tres capas ocultas."
+    "### Ejercicio: Red neuronal MLP con tres capas ocultas."
    ]
   },
   {
@@ -53,9 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sustitutendo ciclos por operaciones vectoriales\n",
+    "#### Sustituyendo ciclos por operaciones vectoriales\n",
     "\n",
-    "Capa 1:\n",
+    "##### Capa 1:\n",
     "\n",
     "La matriz de pesos es de la forma: $$ W^{(1)}=[M_1,d+1] $$\n",
     "\n",
@@ -67,7 +67,7 @@
     "\n",
     "$$  W^{(1)}.X^{T}=[M_1,1]=C_1$$\n",
     "\n",
-    "Capa 2:\n",
+    "##### Capa 2:\n",
     "\n",
     "La matriz de pesos es de la forma: $$ W^{(2)}=[M_2,M_1] $$\n",
     "\n",
@@ -77,7 +77,7 @@
     "\n",
     "$$  W^{(2)}.C_1=[M_2,1]=C_2$$\n",
     "\n",
-    "Capa 3:\n",
+    "##### Capa 3:\n",
     "\n",
     "La matriz de pesos es de la forma: $$ W^{(3)}=[M_3,M_2] $$\n",
     "\n",
@@ -85,7 +85,7 @@
     "\n",
     "$$  W^{(3)}.C_2=[M_3,1]=C_3$$\n",
     "\n",
-    "Capa de Salida (4):\n",
+    "##### Capa de Salida (4):\n",
     "\n",
     "La matriz de pesos es de la forma: $$ W^{(4)}=[K,M_3] $$\n",
     "\n",
@@ -93,7 +93,7 @@
     "\n",
     "$$  W^{(4)}.C_3=[K,1]=C_3$$\n",
     "\n",
-    "Combinando lo anterior, y teniendo en cuenta las funciones de activación de las capas, se obtiene la ecuacion:\n",
+    "Combinando lo anterior y teniendo en cuenta las funciones de activación de las capas, se obtiene la ecuacion:\n",
     "\n",
     "$$ y({\\bf{x}},{\\bf{w}}) = \\sigma\\left(W^{(4)}.h_3(W^{(3)}.h_2(W^{(2)}.h_1(W^{(1)}.X^{T})))\\right) $$"
    ]
