Completing ANN_Exercise

--- a/ANN_Exercise.ipynb
+++ b/ANN_Exercise.ipynb
@@ -53,49 +53,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sustituyendo ciclos por operaciones vectoriales\n",
+    "#### Sustituyendo ciclos por operaciones vectoriales, y teniendo en cuenta un Mini-batch como entrada.\n",
     "\n",
     "##### Capa 1:\n",
     "\n",
-    "La matriz de pesos es de la forma: $$ W^{(1)}=[M_1,d+1] $$\n",
+    "La matriz de pesos es de la forma: $$ W_1=[M_1,d+1] $$\n",
     "\n",
-    "\"Para cada neurona de la capa 1, los pesos asociados a las conexiones con cada neurona de la capa de entrada\"\n",
+    "\"Para cada neurona de la capa 1, los pesos asociados a las conexiones con cada neurona de la capa de entrada, más una columna de unos que representa el término independiente\"\n",
     "\n",
-    "La muestra está dada por el vector: $$ X=[1,d+1] $$\n",
+    "El conjunto de muestras está dado por la matriz: $$ X=[S,d+1] $$\n",
     "\n",
-    "Ahora, obtenemos las salidas de cada de neurona de la capa 1 mediante la operación:\n",
+    "donde S es el tamaño de los subconjuntos del mini-batch.\n",
     "\n",
-    "$$  W^{(1)}.X^{T}=[M_1,1]=C_1$$\n",
+    "Ahora, obtenemos las salidas de cada de neurona de la capa 1 para cada muestra del mini-batch, mediante la operación:\n",
+    "\n",
+    "$$ X.W_1^{T}=[S,M_1]=C_1 $$\n",
+    "\n",
+    "Luego, extendemos la matriz C1 adicionando una columna de unos (1s) al final para representar las salidas del término independiente:\n",
+    "\n",
+    "$$ C_1=[S,M_1+1] $$\n",
     "\n",
     "##### Capa 2:\n",
     "\n",
-    "La matriz de pesos es de la forma: $$ W^{(2)}=[M_2,M_1] $$\n",
+    "La matriz de pesos es de la forma: $$ W_2=[M_2,M_1+1] $$\n",
     "\n",
-    "\"Para cada neurona de la capa 2, los pesos asociados a las conexiones con cada neurona de la capa 1\"\n",
+    "\"Para cada neurona de la capa 2, los pesos asociados a las conexiones con cada neurona de la capa 1, más el término independiente de la capa 1\"\n",
     "\n",
     "Ahora, obtenemos las salidas de cada neurona de la capa 2:\n",
     "\n",
-    "$$  W^{(2)}.C_1=[M_2,1]=C_2$$\n",
+    "$$ C_1.W_2^{T}=[S,M_2]=C_2 $$ y extendiendo C2: $$ C_2=[S,M_2+1] $$\n",
     "\n",
     "##### Capa 3:\n",
     "\n",
-    "La matriz de pesos es de la forma: $$ W^{(3)}=[M_3,M_2] $$\n",
+    "La matriz de pesos es de la forma: $$ W_3=[M_3,M_2+1] $$\n",
     "\n",
     "Salidas de cada neurona de la capa 3:\n",
     "\n",
-    "$$  W^{(3)}.C_2=[M_3,1]=C_3$$\n",
+    "$$ C_2.W_3^{T}=[S,M_3]=C_3 $$ y extendiendo C3: $$ C_3=[S,M_3+1] $$\n",
     "\n",
     "##### Capa de Salida (4):\n",
     "\n",
-    "La matriz de pesos es de la forma: $$ W^{(4)}=[K,M_3] $$\n",
+    "La matriz de pesos es de la forma: $$ W_4=[K,M_3+1] $$\n",
     "\n",
-    "Salidas de la red:\n",
+    "Salidas de la red para cada muestra del mini-batch:\n",
     "\n",
-    "$$  W^{(4)}.C_3=[K,1]=C_3$$\n",
+    "$$  C_3.W_4^{T}=[S,K]$$\n",
     "\n",
     "Combinando lo anterior y teniendo en cuenta las funciones de activación de las capas, se obtiene la ecuacion:\n",
     "\n",
-    "$$ y({\\bf{x}},{\\bf{w}}) = \\sigma\\left(W^{(4)}.h_3(W^{(3)}.h_2(W^{(2)}.h_1(W^{(1)}.X^{T})))\\right) $$"
+    "$$ y({\\bf{x}},{\\bf{w}}) = \\sigma\\left(add(h_3(add(h_2(add(h_1(X.W_1^T))).W_2^T).W_3^T).W_4^T\\right) $$\n",
+    "\n",
+    "(se asume una función 'add' que concatena a una matriz una columna de unos al final)"
    ]
   }
  ],
